[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "or-gym"
version = "0.5.0"
authors = [
  { name="Christian Hubbs", email="christiandhubbs@gmail.com"},
  { name="Owais Sarwar", email="owais.sarwar@gmail.com"},
  { name="Hector Perez", email="hdperez@cmu.edu"}
]
description = "OR-Gym: A set of environments for developing reinforcement learning agents for OR problems."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    'gym<=0.21.0',
    'numpy>=1.16.1',
    'pandas>=1.2',
    'scipy>=1.0',
    'matplotlib>=3.1',
    'networkx>=2.3'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hubbs5/or-gym"
"Bug Tracker" = "https://github.com/hubbs5/or-gym/issues"