[tool.poetry]
name = "or-gym"
version = "0.5.0"
authors = [
  "Christian Hubbs <christiandhubbs@gmail.com>",
  "Owais Sarwar <owais.sarwar@gmail.com>",
  "Hector Perez <hdperez@cmu.edu>",
]
maintainers = ["Shun Makino <shun.makino@flect.co.jp>"]
description = "OR-Gym: A set of environments for developing reinforcement learning agents for OR problems."
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "or_gym"}]

[tool.poetry.dependencies]
python = ">=3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/hubbs5/or-gym"
"Bug Tracker" = "https://github.com/hubbs5/or-gym/issues"